Add g4 and g5, licences and update Readme

--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -26,3 +26,5 @@ jobs:
         run: |
           npm run build:g2
           npm run build:g3
+          npm run build:g4
+          npm run build:g5
