--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "docusaurus": "docusaurus",
     "start:g2": "docusaurus start --config docusaurus.config.g2.js",
     "start:g3": "docusaurus start --config docusaurus.config.g3.js",
+    "start:g4": "docusaurus start --config docusaurus.config.g4.js",
+    "start:g5": "docusaurus start --config docusaurus.config.g5.js",
     "build:g2": "docusaurus build --config docusaurus.config.g2.js --out-dir build/g2",
     "build:g3": "docusaurus build --config docusaurus.config.g3.js --out-dir build/g3",
-    "build:all": "npm run build:g2 && npm run build:g3",
+    "build:g4": "docusaurus build --config docusaurus.config.g4.js --out-dir build/g4",
+    "build:g5": "docusaurus build --config docusaurus.config.g5.js --out-dir build/g5",
+    "build:all": "npm run build:g2 && npm run build:g3 && npm run build:g4 && npm run build:g5",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
