--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,8 @@ jobs:
         run: |
           npm run build:g2
           npm run build:g3
+          npm run build:g4
+          npm run build:g5
 
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
